Introduced, Timer, var, reduced scope where possible and minor code optimizations.