@@ -1,14 +1,15 @@
 package com.putoet.day19;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-public class ListRule extends Rule {
+class ListRule extends Rule {
     private final Rules rules;
     private final List<Integer> idList;
 
-    public ListRule(int id, Rules rules, List<Integer> idList) {
+    public ListRule(int id, @NotNull Rules rules, @NotNull List<Integer> idList) {
         super(id);
         this.rules = rules;
         this.idList = idList;
@@ -16,12 +17,12 @@ public class ListRule extends Rule {
 
     @Override
     protected Set<String> createValues() {
-        final List<Rule> ruleList = idList.stream()
+        final var ruleList = idList.stream()
                 .map(rules::get)
-                .collect(Collectors.toList());
+                .toList();
 
         Set<String> set = Set.of();
-        for (Rule rule : ruleList)
+        for (var rule : ruleList)
             set = rule.join(set);
 
         return set;
